--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,12 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+.carousel-bg {
+  background: linear-gradient(
+    100.39deg,
+    rgba(5, 3, 12, 0.92) 19.92%,
+    #344067 62.77%,
+    #592781 127.97%,
+    #321638 148.44%
+  );
+}
