--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,14 @@ body {
     #321638 148.44%
   );
 }
+.neu {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
 ::-webkit-scrollbar {
   width: 4px;
 }
@@ -82,8 +90,8 @@ body {
 }
 
 .svg-wrapper:hover .shape {
-  -webkit-animation: 0.5s draw linear forwards;
-  animation: 0.5s draw linear forwards;
+  -webkit-animation: 1s draw linear forwards;
+  animation: 1s draw linear forwards;
 }
 
 .gradient-border {
@@ -91,29 +99,6 @@ body {
   background: #fff;
   position: relative;
   border-radius: var(--borderWidth);
-}
-.gradient-border:after {
-  content: "";
-  position: absolute;
-  top: calc(-1 * var(--borderWidth));
-  left: calc(-1 * var(--borderWidth));
-  height: calc(100% + var(--borderWidth) * 2);
-  width: calc(100% + var(--borderWidth) * 2);
-  background: linear-gradient(
-    60deg,
-    #f79533,
-    #f37055,
-    #ef4e7b,
-    #a166ab,
-    #5073b8,
-    #1098ad,
-    #07b39b,
-    #6fba82
-  );
-  border-radius: calc(2 * var(--borderWidth));
-  z-index: -1;
-  animation: animatedgradient 3s ease alternate infinite;
-  background-size: 300% 300%;
 }
 
 @keyframes animatedgradient {
