--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
 body {
   font-family: "Darker Grotesque", sans-serif;
+  background-color: #1e1e1e;
 }
 
 .button-bg {
@@ -31,23 +32,6 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-}
-.carousel-bg {
-  background: linear-gradient(
-    100.39deg,
-    rgba(5, 3, 12, 0.92) 19.92%,
-    #344067 62.77%,
-    #592781 127.97%,
-    #321638 148.44%
-  );
-}
-.neu {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 ::-webkit-scrollbar {
   width: 4px;
@@ -97,6 +81,47 @@ body {
   }
 }
 
+.radial-bg {
+  box-shadow: 0px 0.299882px 0.299882px rgba(51, 51, 51, 0.25);
+  background: linear-gradient(
+    91.6deg,
+    #35529d 1.36%,
+    #72c2d3 28.48%,
+    #e7a1e0 98.99%
+  );
+  opacity: 0.6;
+  filter: blur(212.104px);
+  position: absolute;
+  /* transform: matrix(-0.31, -0.95, -0.95, 0.31, 0, 0); */
+  border-radius: 29.9882px;
+}
+.radial-bg-2 {
+  box-shadow: 0px 0.299882px 0.299882px rgba(51, 51, 51, 0.25);
+  background: linear-gradient(
+    91.6deg,
+    #35529d 1.36%,
+    #72c2d3 28.48%,
+    #e7a1e0 98.99%
+  );
+  opacity: 0.2;
+  filter: blur(212.104px);
+  position: absolute;
+  /* transform: matrix(-0.31, -0.95, -0.95, 0.31, 0, 0); */
+  border-radius: 29.9882px;
+}
+
+.card-bg {
+  background: #201f1f;
+  box-shadow: 0px 0.299882px 0.299882px rgba(51, 51, 51, 0.25);
+  background: linear-gradient(
+    91.6deg,
+    #35529d 1.36%,
+    #72c2d3 28.48%,
+    #e7a1e0 98.99%
+  );
+  /* filter: blur(2.104px); */
+}
+
 .svg-wrapper:hover .shape {
   -webkit-animation: 1s draw linear forwards;
   animation: 1s draw linear forwards;
@@ -105,7 +130,6 @@ body {
 .gradient-border {
   --borderWidth: 2px;
   background: #fff;
-  position: relative;
   border-radius: var(--borderWidth);
 }
 
